class FieldInfo:
    def __init__(self, field_type: str, field_name: str):
        self.field_type: str = field_type
        self.field_name: str = field_name
